@@ -312,6 +312,17 @@
       </component>
     </version>
   </module>
+  <module name="drwright">
+    <version release="gnome-2.4">
+      <component name="drwright" dir="drwright" group="extras">
+	<podir dir="po"/>
+	<potname name="drwright.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="ee">
     <version release="gnome-1.4">
       <component name="ee" dir="ee" group="extras">
