@@ -1,3 +1,7 @@
+2003-05-20  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added drwright.
+
 2003-05-17  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Added gtksourceview.
